<resources>
    <string name="app_name">TODOapp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="show_notes">Show notes</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="ok">OK</string>

    <string name="note_notification_channel_id" translatable="false">note_channel</string>
    <string name="note_notification_channel_name" translatable="false">Note</string>
    <string name="note_notification_channel_description" translatable="false">Remind about some note</string>
    <string name="share_note">Share note!</string>
    <string name="notification">Notification</string>
    <string name="date">Date</string>
    <string name="some_awesome_note_description_bla_bla_bla_bla">Some awesome note description bla bla bla bla</string>
    <string name="notification_icon">Notification icon</string>
</resources>