<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/menu_delete_all_notes"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/white"
        app:showAsAction="always" />


    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:targetApi="o"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_show"
        android:title="@string/show_notes"
        android:icon="@drawable/ic_show"
        app:showAsAction="never"
        android:checkable="true" />

    <item android:id="@+id/menu_change_layout"
        android:title="Grid layout"
        android:icon="@drawable/ic_grid"
        app:showAsAction="never"
        android:checkable="true" />


</menu>