<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        app:cardElevation="5sp"

        app:cardCornerRadius="8dp"

        android:layout_margin="10sp"
        android:layout_width="match_parent"

        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        app:contentPadding="4dp"

        android:layout_height="wrap_content"
        android:id="@+id/rowLayout">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/rowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnSecondary"
        android:maxLines="1"

        app:layout_constraintBottom_toTopOf="@+id/descTV"
        app:layout_constraintTop_toTopOf="@+id/descTV">


        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/korb"
            android:maxLines="1"
            android:text="@string/subject"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:breakStrategy="high_quality"
            android:ellipsize="end"
            android:gravity="start|top"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:scrollHorizontally="false"
            android:maxLines="1"
            android:text="@string/some_awesome_note_description_bla_bla_bla_bla"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_subject"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="@+id/tv_subject"
            app:layout_constraintTop_toBottomOf="@+id/tv_subject"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <ImageView
            android:id="@+id/iv_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/notification_icon" />

        <TextView
            android:id="@+id/tv_reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subject"
            app:layout_constraintEnd_toStartOf="@+id/iv_reminder"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
